# TetriTake

./: CMakeLists.txt  README
include/: CMakeLists.txt  config.h.in
raw/: Icon.xcf  arrow.xcf  background.xcf  block.xcf  border.xcf  corner.xcf
resources/: Icon.icns
source/: CMakeLists.txt
source/input/: CMakeLists.txt  action_manager.cpp  action_manager.hpp
source/main/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
source/state/: CMakeLists.txt  main_menu.cpp  main_menu.hpp  main_menu_background.cpp  main_menu_background.hpp  null_state.hpp  play_state.cpp  play_state.hpp  state.hpp
source/util/: CMakeLists.txt  foreach.hpp  pointers.hpp
source/wdg/: CMakeLists.txt  arrow.cpp  arrow.hpp  block.cpp  block.hpp  board.cpp  board.hpp  next_shape.cpp  next_shape.hpp  outline_box.cpp  outline_box.hpp  score_counter.cpp  score_counter.hpp  shape.cpp  shape.hpp  widget.hpp
